# temp-on-site-polkadot-sdk-singapore-kianenigma

./: ASSIGNMENT.md  Cargo.toml  README.md
pallets/dpos/: Cargo.toml
pallets/dpos/src/: lib.rs  mock.rs  tests.rs
pallets/free-tx/: Cargo.toml
pallets/free-tx/src/: lib.rs  mock.rs  tests.rs
pallets/multisig/: Cargo.toml
pallets/multisig/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
pallets/treasury/: Cargo.toml
pallets/treasury/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
